--- a/multimedia_es.html
+++ b/multimedia_es.html
@@ -247,49 +247,91 @@
   <p>Esta son fotos de mi en varias situaciones o fotos tomadas por mi.</p>
   <div class="row" style="display:flex;align-items: center;">
     <div class="col-md-4" style="padding-top:1em;text-align:center;">
-      <img style="width:90%;" src="imgs/whatisvoting.jpg" alt="Josue Tonelli-Cueto giving a talk at the WhatIsSeminar"/>
-      <p style="margin:0;text-align:center;font-size:0.5em;">(&copy;2018 &ldquo;What is...?&rdquo; Seminar)</p>
-      <p style="margin:0;text-align:center;padding-top:0em;">Berlin,  diciembre de 2018</p>
-      <p style="text-align:justify;font-size:small;">Dando la charla <em>What is the best voting system?</em> en el &ldquo;What is...?&rdquo; Seminar.</p>
+      <img style="width:90%;" src="imgs/Doc03.JPG" alt="Josue Tonelli-Cueto and his academic and non-academic parents after his doctoral defence."/>
+      <p style="margin:0;text-align:center;font-size:0.5em;">(&copy;2019 Evgenia Lagoda)</p>
+      <p style="margin:0;text-align:center;padding-top:0em;">Berlin, noviembre de 2019</p>
+      <p style="text-align:justify;font-size:small;">Con mis padres académicos y de vida tras mi defensa doctoral. De izquierda a derecha, Massimiliano Tonelli (padre), Peter B&uuml;rgisser (supervisor), me, Felipe Cucker (supervisor) y María Jesús Cueto Puente (madre).</p>
     </div>
 
     <div class="col-md-4" style="padding-top:1em;text-align:center;">
-      <img style="width:90%;" src="imgs/NationalPrize112018.jpg" alt="Josue Tonelli-Cueto receiving the Spanish National Prize End of Studies"/>
-      <p style="margin:0;text-align:center;font-size:0.5em;">(&copy;2018 Gobierno de España)</p>
-      <p style="margin:0;text-align:center;padding-top:0em;">Madrid, November de 2018</p>
-      <p style="text-align:justify;font-size:small;">Recibiendo uno de los primeros premios de los Premios Nacionales Fin de Carrera de parte del ministro de ciencia, innovación y universidades Pedro Duque.</p>
+      <img style="width:90%;" src="imgs/Doc06.JPG" alt="Josue Tonelli-Cueto with some of his friends from Berlin after his doctoral defence."/>
+      <p style="margin:0;text-align:center;font-size:0.5em;">(&copy;2019 Evgenia Lagoda)</p>
+      <p style="margin:0;text-align:center;padding-top:0em;">Berlin, noviembre de 2019</p>
+      <p style="text-align:justify;font-size:small;">Con algunes amigues de Berlin tras mi defensa doctoral. De izquierda a derecha, Robert Schwieger, Shane Carlson, Rinat Khanbekov, Eddie Seabrook, me, Justine Mullon, y Milica Valent.</p>
     </div>
 
     <div class="col-md-4" style="padding-top:1em;text-align:center;">
-      <img style="width:90%;" src="imgs/BMSCertificate2018.jpg" alt="Josue Tonelli-Cueto and his parent Maria Jesus and Massimiliano "/>
-      <p style="margin:0;text-align:center;font-size:0.5em;">(&copy;2018 Kay Hermschelmann & BMS)</p>
-      <p style="margin:0;text-align:center;padding-top:0em;">Berlin, julio de 2018</p>
-      <p style="text-align:justify;font-size:small;">Junto a mis padres, Massimiliano Tonelli (izquierda) y María Jesús Cueto Puente (derecha), después de la BMS Certificate Ceremony donde me dieron un certificado por la compleción de la BMS Phase I, esto es, los cursos de doctorado.</p>
+      <img style="width:90%;" src="imgs/DocDef01.jpeg" alt="Josue Tonelli-Cueto during his doctoral defence."/>
+      <p style="margin:0;text-align:center;font-size:0.5em;">(&copy;2019 Milica Valent)</p>
+      <p style="margin:0;text-align:center;padding-top:0em;">Berlin, noviembre de 2019</p>
+      <p style="text-align:justify;font-size:small;">Durante mi defensa doctoral el 28 de noviembre del 2019.</p>
     </div>
 
     <div class="col-md-4" style="padding-top:1em;text-align:center;">
-      <img style="width:90%;" src="imgs/teufelsberg2018.jpg" alt="Peter Burgisser, Felipe Cucker, Josue Tonelli-Cueto and Alperen Ergur at Teufelsberg"/>
-      <p style="margin:0;text-align:center;font-size:0.5em;"></p>
-      <p style="margin:0;text-align:center;padding-top:0.7em;">Teufelsberg, junio de 2018</p>
-      <p style="text-align:justify;font-size:small;">Together with (left to right) Peter Bürgisser, Felipe Cucker and Alpeen A. Ergür at Teufelsberg, in the outskirts of Berlin, during a hiking trip.</p>
+      <img style="width:90%;" src="imgs/SIAM2019.jpg" alt="Josue Tonelli-Cueto giving a talk at the SIAM Conference on Applied Algebraic Geometry 2019"/>
+      <p style="margin:0;text-align:center;font-size:0.5em;">(&copy;2019 Felipe Cucker)</p>
+      <p style="margin:0;text-align:center;padding-top:0em;">Bern, julio de 2019</p>
+      <p style="text-align:justify;font-size:small;">Dando la charla <em>Farewell to Weyl: Condition-based analysis with a Banach norm in numerical algebraic geometry</em> en el Minisimposio <em>Numerical methods for structured polynomial system solving</em> de la SIAM Conference on Applied Algebraic Geometry 2019.</p>
     </div>
 
    <div class="col-md-4" style="padding-top:1em;text-align:center;">
-     <img style="width:90%;" src="imgs/bmsstudconf2018_1.jpg" alt="6th BMS Student Conference organizers Héctor Andrade Loarca, Yuya Tokuta, Josué Tonelli-Cueto, Brent Moran and Qiao Luo"/>
-     <p style="margin:0;text-align:center;font-size:0.5em;">(&copy;2018 András Tobiás)</p>
-     <p style="margin:0;text-align:center;padding-top:0em;">Berlin, febrero de 2018</p>
-     <p style="text-align:justify;font-size:small;">En el <em>Vino y Queso</em> de la 6th BMS Student Conference con mis compañeres de organización y anteriormente de les BMS Student Representatives (de izquierda a derecha) Héctor Andrade Loarca, Yuya Tokuta, yo, Brent Moran y Qiao Luo.</p>
+     <img style="width:90%;" src="imgs/MEGA2019.jpg" alt="Josué Tonelli-Cueto in front of his poster at the MEGA 2019"/>
+     <p style="margin:0;text-align:center;font-size:0.5em;">(&copy;2019 Cordian Riener)</p>
+     <p style="margin:0;text-align:center;padding-top:0em;">Madrid, junio de 2019</p>
+     <p style="text-align:justify;font-size:small;">Delante de mi poster <em>Computing the Homology Groups of Closed Semialgebraics Sets in Weak Exponential Time</em> en MEGA2019, donde obtuvo uno de los tres Special Awards to Young Researchers presenting their Posters.</p>
    </div>
 
    <div class="col-md-4" style="padding-top:1em;text-align:center;">
-     <img style="width:90%;" src="imgs/bmsstudconf2018_2.jpg" alt="Josué Tonelli-Cueto at the 6th BMS Student Conference's Wine and Cheese reading the description of the Idiazabal cheese in Basque"/>
-     <p style="margin:0;text-align:center;font-size:0.5em;">(&copy;2018 András Tobiás)</p>
-     <p style="margin:0;text-align:center;padding-top:0em;">Berlin, febrero de 2018</p>
-     <p style="text-align:justify;font-size:small;">En el <em>Vino y Queso</em> de la 6th BMS Student Conference leyendo una descripción del <a href="https://en.wikipedia.org/wiki/Idiazabal_cheese">queso <em>Idiazabal</em></a> en euskera. El texto que leí fue compilado de la <a href="https://www.idiazabalgazta.eus/queso-idiazabal/deskribapena">página oficial del queso <em>Idiazabal</em></a>.</p>
+     <img style="width:90%;" src="imgs/BYMAT2.jpg" alt="Josué Tonelli-Cueto giving a talk at the 2nd BYMAt Conference"/>
+     <p style="margin:0;text-align:center;font-size:0.5em;">(&copy;2019 Adrián Hinojosa Calleja)</p>
+     <p style="margin:0;text-align:center;padding-top:0em;">Madrid, mayo de 2019</p>
+     <p style="text-align:justify;font-size:small;">Dando la charla <em>Hom many zeros does a random fewnomial system have?</em> en la 2nd BYMAT Conference.</p>
    </div>
  </div>
  <p id="botonfotos" style="text-align:center;"><button class="btn-primary" style="width:40%;font-size:1.5em;" onclick="show(1901)">Mostrar m&aacute;s fotos</button></p>
  <div id="extrapictures" class="row" style="display:none;align-items: center;">
+   <div class="col-md-4" style="padding-top:1em;text-align:center;">
+     <img style="width:90%;" src="imgs/whatisvoting.jpg" alt="Josue Tonelli-Cueto giving a talk at the WhatIsSeminar"/>
+     <p style="margin:0;text-align:center;font-size:0.5em;">(&copy;2018 &ldquo;What is...?&rdquo; Seminar)</p>
+     <p style="margin:0;text-align:center;padding-top:0em;">Berlin, diciembre de 2018</p>
+     <p style="text-align:justify;font-size:small;">Dando la charla <em>What is the best voting system?</em> en el &ldquo;What is...?&rdquo; Seminar.</p>
+   </div>
+
+   <div class="col-md-4" style="padding-top:1em;text-align:center;">
+     <img style="width:90%;" src="imgs/NationalPrize112018.jpg" alt="Josue Tonelli-Cueto receiving the Spanish National Prize End of Studies"/>
+     <p style="margin:0;text-align:center;font-size:0.5em;">(&copy;2018 Gobierno de España)</p>
+     <p style="margin:0;text-align:center;padding-top:0em;">Madrid, November de 2018</p>
+     <p style="text-align:justify;font-size:small;">Recibiendo uno de los primeros premios de los Premios Nacionales Fin de Carrera de parte del ministro de ciencia, innovación y universidades Pedro Duque.</p>
+   </div>
+
+   <div class="col-md-4" style="padding-top:1em;text-align:center;">
+     <img style="width:90%;" src="imgs/BMSCertificate2018.jpg" alt="Josue Tonelli-Cueto and his parent Maria Jesus and Massimiliano "/>
+     <p style="margin:0;text-align:center;font-size:0.5em;">(&copy;2018 Kay Hermschelmann & BMS)</p>
+     <p style="margin:0;text-align:center;padding-top:0em;">Berlin, julio de 2018</p>
+     <p style="text-align:justify;font-size:small;">Junto a mis padres, Massimiliano Tonelli (izquierda) y María Jesús Cueto Puente (derecha), después de la BMS Certificate Ceremony donde me dieron un certificado por la compleción de la BMS Phase I, esto es, los cursos de doctorado.</p>
+   </div>
+
+   <div class="col-md-4" style="padding-top:1em;text-align:center;">
+     <img style="width:90%;" src="imgs/teufelsberg2018.jpg" alt="Peter Burgisser, Felipe Cucker, Josue Tonelli-Cueto and Alperen Ergur at Teufelsberg"/>
+     <p style="margin:0;text-align:center;font-size:0.5em;">(&copy;2018 Evgenia Lagoda)</p>
+     <p style="margin:0;text-align:center;padding-top:0em;">Teufelsberg, junio de 2018</p>
+     <p style="text-align:justify;font-size:small;">Together with (left to right) Peter Bürgisser, Felipe Cucker y Alpeen A. Ergür at Teufelsberg, en las afuera de Berlin, durante un día de senderismo.</p>
+   </div>
+
+  <div class="col-md-4" style="padding-top:1em;text-align:center;">
+    <img style="width:90%;" src="imgs/bmsstudconf2018_1.jpg" alt="6th BMS Student Conference organizers Héctor Andrade Loarca, Yuya Tokuta, Josué Tonelli-Cueto, Brent Moran and Qiao Luo"/>
+    <p style="margin:0;text-align:center;font-size:0.5em;">(&copy;2018 András Tobiás)</p>
+    <p style="margin:0;text-align:center;padding-top:0em;">Berlin, febrero de 2018</p>
+    <p style="text-align:justify;font-size:small;">En el <em>Vino y Queso</em> de la 6th BMS Student Conference con mis compañeres de organización y anteriormente de les BMS Student Representatives (de izquierda a derecha) Héctor Andrade Loarca, Yuya Tokuta, yo, Brent Moran y Qiao Luo.</p>
+  </div>
+
+  <div class="col-md-4" style="padding-top:1em;text-align:center;">
+    <img style="width:90%;" src="imgs/bmsstudconf2018_2.jpg" alt="Josué Tonelli-Cueto at the 6th BMS Student Conference's Wine and Cheese reading the description of the Idiazabal cheese in Basque"/>
+    <p style="margin:0;text-align:center;font-size:0.5em;">(&copy;2018 András Tobiás)</p>
+    <p style="margin:0;text-align:center;padding-top:0em;">Berlin, febrero de 2018</p>
+    <p style="text-align:justify;font-size:small;">En el <em>Vino y Queso</em> de la 6th BMS Student Conference leyendo una descripción del <a href="https://en.wikipedia.org/wiki/Idiazabal_cheese">queso <em>Idiazabal</em></a> en euskera. El texto que leí fue compilado de la <a href="https://www.idiazabalgazta.eus/queso-idiazabal/deskribapena">página oficial del queso <em>Idiazabal</em></a>.</p>
+  </div>
+
    <div class="col-md-4" style="padding-top:1em;text-align:center;">
      <img style="width:90%;" src="imgs/LeventJosue102017.jpg" alt="Levent Dogan and Josue Tonelli-Cueto"/>
      <p style="margin:0;text-align:center;font-size:0.5em;">(&copy;2017 BMS)</p>
@@ -313,12 +355,13 @@
 
    <div class="col-md-4" style="padding-top:1em;text-align:center;">
      <img style="width:90%;" src="pikasle/fotogrupo2014.JPG" alt="Team of PIkasle"/>
-     <p style="margin:0;text-align:center;padding-top:0.7em;">Bilbao, junio de 2014</p>
-     <p style="text-align:justify;font-size:small;">Junto con el equipo de $\pi$kasle: (de izquierda a derecha) Ricardo Grande, Aitziber Ibañez, Jon Asier Bárcena, Marta Macho, Imanol Pérez, (bottom left to right) Víctor Manero, Irene Llana, Antonio Gallastegui, Julio García, Manuel Santos y yo.</p>
+     <p style="margin:0;text-align:center;font-size:0.5em;">(&copy;2014 PIkasle)</p>
+     <p style="margin:0;text-align:center;padding-top:0em;">Bilbao, junio de 2014</p>
+     <p style="text-align:justify;font-size:small;">Junto con el equipo de $\pi kasle$: (de izquierda a derecha) Ricardo Grande, Aitziber Ibañez, Jon Asier Bárcena, Marta Macho, Imanol Pérez, (bottom left to right) Víctor Manero, Irene Llana, Antonio Gallastegui, Julio García, Manuel Santos y yo.</p>
    </div>
 
    <div class="col-md-4" style="padding-top:1em;text-align:center;">
-     <img style="width:90%;" src="imgs/Debate1.jpg" alt="Part of the debating team of the University of the Basque Cpuntry"/>
+     <img style="width:90%;" src="imgs/Debate1.jpg" alt="Part of the debating team of the University of the Basque Country"/>
      <p style="margin:0;text-align:center;font-size:0.5em;">(&copy;2012 María Jesús Cueto Puente)</p>
      <p style="margin:0;text-align:center;padding-top:0em;">Bilbao, November de 2012</p>
      <p style="text-align:justify;font-size:small;">Junto a algunes compañeres del club de debate de la Universidad del País Vasco, (de izquierda a derecha) Santi González, Ion Baratas, Leire Caballero y yo; y mi abuela María Jesús Puente de la Peña (segunda por la derecha).</p>
@@ -326,7 +369,8 @@
 
    <div class="col-md-4" style="padding-top:1em;text-align:center;">
      <img style="width:90%;" src="imgs/Moore122011.JPG" alt="Group of people that attened the Graph Theory Seminar using the Moore method"/>
-     <p style="margin:0;text-align:center;padding-top:0.7em;">Leioa, diciembre de 2011</p>
+     <p style="margin:0;text-align:center;font-size:0.5em;">(&copy;2011 PIkasle)</p>
+     <p style="margin:0;text-align:center;padding-top:0em;">Leioa, diciembre de 2011</p>
      <p style="text-align:justify;font-size:small;">Con el grupo de estudiantes que atendió el curso de teoría de grafos usando el método de Moore: (de izquierda a derecha) yo, Iván Sánchez, Aitziber Ibañez, Ixiar Leunda, Luis Martínez y Ricardo Grande.</p>
    </div>
 
@@ -339,7 +383,8 @@
 
    <div class="col-md-4" style="padding-top:1em;text-align:center;">
      <img style="width:80%;" src="imgs/PortraitMarch2010.JPG" alt="Josue Tonelli-Cueto at de 2010 with paint on his face"/>
-     <p style="margin:0;text-align:center;padding-top:0.7em;">Bilbao, marzo de 2010</p>
+     <p style="margin:0;text-align:center;font-size:0.5em;">(&copy;2010 Iasafro Maesman)</p>
+     <p style="margin:0;text-align:center;padding-top:0em;">Bilbao, marzo de 2010</p>
      <p style="text-align:justify;font-size:small;">Después de pintar un lienzo y mi cara.</p>
    </div>
 
