--- a/doctoralthesis.html
+++ b/doctoralthesis.html
@@ -12,6 +12,19 @@
     <link href="css/bootstrap.min.css" rel="stylesheet"/>
 
     <!--  Custom styles for this template  -->
+    <style>
+    .btn-primary, .btn-primary:active, .btn-secondary, .btn-secondary:active{
+    	background-color: #ee2523;
+    	border-color : white;
+    	color: white;
+    }
+
+    .btn-primary:hover, .btn-primary:focus, .btn-secondary:hover, .btn-secondary:focus{
+        background-color: #FFFFFF;
+    		border-color: #ee2523;
+    		color: black;
+    }
+    </style>
     <link href="css/style.css" rel="stylesheet"/>
     <link rel="stylesheet" href="https://cdn.rawgit.com/jpswalsh/academicons/master/css/academicons.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
@@ -197,9 +210,94 @@
   <p>
   The doctoral defense took place on the 28th of November of 2019 at 12:00 at room MA313/314 on the 3rd floor of the Institut für Mathematik of the Technische Universität Berlin (Str. des 17. Juni, 136). This public event consisted of a presentation of 30 minutes, followed by 90 minutes of discussion. After the defense, the doctoral committee met in private. Once they arrived at a decision, they communicated to me in private that I had successfully passed the doctoral examination. Additionally, they gave me comments and possible minor changes and corrections for preparing the final version of the thesis.
   </p>
+  <div class="row" style="display:flex;align-items: center;">
+  <div class="col-md-3"></div>
+  <div class="col-md-6" style="padding-top:1em;text-align:center;">
+    <img style="width:80%;" src="imgs/DocDef01.jpeg" alt="Josue Tonelli-Cueto during his doctoral defence."/>
+    <p style="margin:0;text-align:center;font-size:0.5em;">(&copy;2019 Milica Valent)</p>
+  </div>
+  <div class="col-md-3"></div>
+  </div>
   <p>
-  After a successful defense, there was a small celebration with food and drinks in the Matheon Lounge (MA315).
+  After a successful defense, there was a small celebration with food and drinks in the Matheon Lounge (MA315) with friends and relatives.
   </p>
+  <p id="botonfotos" style="text-align:center;"><button class="btn-primary" style="width:40%;font-size:1.5em;" onclick="show(1901)">Show pictures of the afterdefence</button></p>
+  <div id="extrapictures" class="row" style="display:none;align-items: center;">
+  <div class="row" style="display:flex;align-items: center;">
+    <div class="col-md-4" style="padding-top:1em;text-align:center;">
+      <img style="width:90%;" src="imgs/Doc02.JPG" alt="Josue Tonelli-Cueto with his parents after his doctoral defence."/>
+      <p style="margin:0;text-align:center;font-size:0.5em;">(&copy;2019 Evgenia Lagoda)</p>
+      <p style="text-align:justify;font-size:small;">With my parents. From left to right, Massimiliano Tonelli, me, and María Jesús Cueto Puente.</p>
+    </div>
+
+    <div class="col-md-4" style="padding-top:1em;text-align:center;">
+      <img style="width:90%;" src="imgs/Doc01.JPG" alt="Josue Tonelli-Cueto and his supervisors after his doctoral defence."/>
+      <p style="margin:0;text-align:center;font-size:0.5em;">(&copy;2019 Evgenia Lagoda)</p>
+      <p style="text-align:justify;font-size:small;">With my supervisors. From left to right, Peter B&uuml;rgisser, me, and Felipe Cucker.</p>
+    </div>
+
+    <div class="col-md-4" style="padding-top:1em;text-align:center;">
+      <img style="width:90%;" src="imgs/Doc03.JPG" alt="Josue Tonelli-Cueto and his academic and non-academic parents after his doctoral defence."/>
+      <p style="margin:0;text-align:center;font-size:0.5em;">(&copy;2019 Evgenia Lagoda)</p>
+      <p style="text-align:justify;font-size:small;">With my academic and life parents. From left to right, Massimiliano Tonelli, Peter B&uuml;rgisser, me, Felipe Cucker, and María Jesús Cueto Puente.</p>
+    </div>
+
+    <div class="col-md-4" style="padding-top:1em;text-align:center;">
+      <img style="width:90%;" src="imgs/Doc05.JPG" alt="Josue Tonelli-Cueto with his parents and friends from Bilbao."/>
+      <p style="margin:0;text-align:center;font-size:0.5em;">(&copy;2019 Evgenia Lagoda)</p>
+      <p style="text-align:justify;font-size:small;">With my parents and a pair of friends from Bilbao. From left to right, me, Massimiliano Tonelli, Aritzeder Aranguren Cebas, María Jesús Cueto Puente, and Iratxe Niño Adan.</p>
+    </div>
+
+    <div class="col-md-4" style="padding-top:1em;text-align:center;">
+      <img style="width:90%;" src="imgs/Doc06.JPG" alt="Josue Tonelli-Cueto with some of his friends from Berlin after his doctoral defence."/>
+      <p style="margin:0;text-align:center;font-size:0.5em;">(&copy;2019 Evgenia Lagoda)</p>
+      <p style="text-align:justify;font-size:small;">With some friends from Berlin. From left to right, Robert Schwieger, Shane Carlson, Rinat Khanbekov, Eddie Seabrook, me, Justine Mullon, and Milica Valent.</p>
+    </div>
+
+    <div class="col-md-4" style="padding-top:1em;text-align:center;">
+      <img style="width:90%;" src="imgs/Doc04.JPG" alt="Josue Tonelli-Cueto with his doctoral committee after his doctoral defence."/>
+      <p style="margin:0;text-align:center;font-size:0.5em;">(&copy;2019 Evgenia Lagoda)</p>
+      <p style="text-align:justify;font-size:small;">With my doctoral supervisors and the external evaluator of my doctoral committee. From left to right, Felipe Cucker, Peter B&uuml;rgisser, me, and Pierre Lairez.</p>
+    </div>
+
+    <div class="col-md-4" style="padding-top:1em;text-align:center;">
+      <img style="width:90%;" src="imgs/Doc08.JPG" alt="Josue Tonelli-Cueto with some Spanish friends from Berlin after his doctoral defence."/>
+      <p style="margin:0;text-align:center;font-size:0.5em;">(&copy;2019 Evgenia Lagoda)</p>
+      <p style="text-align:justify;font-size:small;">With some Spanish friends from Berlin. From left to right, Concha Álvarez, me, Zara (Juan Antonio Zaratiegui), and Pedro Ángel Castillejo.</p>
+    </div>
+
+    <div class="col-md-4" style="padding-top:1em;text-align:center;">
+      <img style="width:90%;" src="imgs/Doc07.JPG" alt="Josue Tonelli-Cueto with Justine Mullon after his doctoral defence."/>
+      <p style="margin:0;text-align:center;font-size:0.5em;">(&copy;2019 Evgenia Lagoda)</p>
+      <p style="text-align:justify;font-size:small;">With my friend Justine Mullon.</p>
+    </div>
+
+    <div class="col-md-4" style="padding-top:1em;text-align:center;">
+      <img style="width:90%;" src="imgs/Doc09.JPG" alt="Josue Tonelli-Cueto with some friend from Berlin after his doctoral defence."/>
+      <p style="margin:0;text-align:center;font-size:0.5em;">(&copy;2019 Evgenia Lagoda)</p>
+      <p style="text-align:justify;font-size:small;">With some friends of Berlin. From left to right, Qianheng Chen, Qiao Luo, me, and Héctor Andrade Loarca.</p>
+    </div>
+
+    <div class="col-md-4" style="padding-top:1em;text-align:center;">
+      <img style="width:90%;" src="imgs/Doc10.JPG" alt="Josue Tonelli-Cueto with John M. Sullivan after his doctoral defence."/>
+      <p style="margin:0;text-align:center;font-size:0.5em;">(&copy;2019 Evgenia Lagoda)</p>
+      <p style="text-align:justify;font-size:small;">With John M. Sullivan, chair of my doctoral committee.</p>
+    </div>
+
+    <div class="col-md-4" style="padding-top:1em;text-align:center;">
+      <img style="width:90%;" src="imgs/Doc11.JPG" alt="Josue Tonelli-Cueto with Matias Bender after his doctoral defence."/>
+      <p style="margin:0;text-align:center;font-size:0.5em;">(&copy;2019 Evgenia Lagoda)</p>
+      <p style="text-align:justify;font-size:small;">With my friend and colleague Matías Bender.</p>
+    </div>
+
+    <div class="col-md-4" style="padding-top:1em;text-align:center;">
+      <img style="width:90%;" src="imgs/Doc12.JPG" alt="Celebratory dinner of the doctoral defence of Josue Tonelli-Cueto."/>
+      <p style="margin:0;text-align:center;font-size:0.5em;">(&copy;2019 Evgenia Lagoda)</p>
+      <p style="text-align:justify;font-size:small;">Celebrating the successful defence. From left to right, Aritzeder Aranguren Cebas, María Jesús Cueto Puente, Claudia Cucker Martorell, Pierre Lairez, me, Peter B&uuml;rgisser, Felipe Cucker, Iratxe Niño Adan, and Massimiliano Tonelli.</p>
+    </div>
+
+  </div>
+  </div>
   <h3>
   Publication of the thesis (30th of December of 2019)
   </h3>
@@ -261,6 +359,16 @@
     document.getElementById("finalsentence").innerHTML="";
     }
     //-->
+    </script>
+    <!--For buttons-->
+    <script type="text/javascript">
+    function show(y) {
+      if (y === 1901){
+        var x = document.getElementById("extrapictures");
+        x.style.display = "flex";
+        document.getElementById("botonfotos").style="display:none;";
+        }
+    }
     </script>
     <!-- For math expression-->
     <script type="text/x-mathjax-config">
