--- a/multimedia.html
+++ b/multimedia.html
@@ -246,50 +246,92 @@
   <p>These are either some pictures of myself in several situations or photos taken by me.</p>
   <div class="row" style="display:flex;align-items: center;">
     <div class="col-md-4" style="padding-top:1em;text-align:center;">
-      <img style="width:90%;" src="imgs/whatisvoting.jpg" alt="Josue Tonelli-Cueto giving a talk at the WhatIsSeminar"/>
-      <p style="margin:0;text-align:center;font-size:0.5em;">(&copy;2018 &ldquo;What is...?&rdquo; Seminar)</p>
-      <p style="margin:0;text-align:center;padding-top:0em;">Berlin,  December 2018</p>
-      <p style="text-align:justify;font-size:small;">Giving the talk <em>What is the best voting system?</em> at the &ldquo;What is...?&rdquo; Seminar.</p>
+      <img style="width:90%;" src="imgs/Doc03.JPG" alt="Josue Tonelli-Cueto and his academic and non-academic parents after his doctoral defence."/>
+      <p style="margin:0;text-align:center;font-size:0.5em;">(&copy;2019 Evgenia Lagoda)</p>
+      <p style="margin:0;text-align:center;padding-top:0em;">Berlin, November 2019</p>
+      <p style="text-align:justify;font-size:small;">With my academic and life parents after my doctoral defence. From left to right, Massimiliano Tonelli (father), Peter B&uuml;rgisser (supervisor), me, Felipe Cucker (supervisor) and María Jesús Cueto Puente (mother).</p>
     </div>
 
     <div class="col-md-4" style="padding-top:1em;text-align:center;">
-      <img style="width:90%;" src="imgs/NationalPrize112018.jpg" alt="Josue Tonelli-Cueto receiving the Spanish National Prize End of Studies"/>
-      <p style="margin:0;text-align:center;font-size:0.5em;">(&copy;2018 Gobierno de España)</p>
-      <p style="margin:0;text-align:center;padding-top:0em;">Madrid, November 2018</p>
-      <p style="text-align:justify;font-size:small;">Receiving one of the first prizes in the Spanish National End of Studies Awards from the Spanish Minister of Science, Innovation and Universities Pedro Duque.</p>
+      <img style="width:90%;" src="imgs/Doc06.JPG" alt="Josue Tonelli-Cueto with some of his friends from Berlin after his doctoral defence."/>
+      <p style="margin:0;text-align:center;font-size:0.5em;">(&copy;2019 Evgenia Lagoda)</p>
+      <p style="margin:0;text-align:center;padding-top:0em;">Berlin, November 2019</p>
+      <p style="text-align:justify;font-size:small;">With some friends from Berlin after my doctoral defence. From left to right, Robert Schwieger, Shane Carlson, Rinat Khanbekov, Eddie Seabrook, me, Justine Mullon, and Milica Valent.</p>
     </div>
 
     <div class="col-md-4" style="padding-top:1em;text-align:center;">
-      <img style="width:90%;" src="imgs/BMSCertificate2018.jpg" alt="Josue Tonelli-Cueto and his parent Maria Jesus and Massimiliano "/>
-      <p style="margin:0;text-align:center;font-size:0.5em;">(&copy;2018 Kay Hermschelmann & BMS)</p>
-      <p style="margin:0;text-align:center;padding-top:0em;">Berlin, July 2018</p>
-      <p style="text-align:justify;font-size:small;">Together with my parents, Massimiliano Tonelli (left) and María Jesús Cueto Puente (right), after the BMS Certificate Ceremony where they gave me a certificate for the completion of the BMS Phase I (i.e. the courses of the PhD studies).</p>
+      <img style="width:90%;" src="imgs/DocDef01.jpeg" alt="Josue Tonelli-Cueto during his doctoral defence."/>
+      <p style="margin:0;text-align:center;font-size:0.5em;">(&copy;2019 Milica Valent)</p>
+      <p style="margin:0;text-align:center;padding-top:0em;">Berlin, November 2019</p>
+      <p style="text-align:justify;font-size:small;">During my doctoral defence on the 29th of November of 2019.</p>
     </div>
 
     <div class="col-md-4" style="padding-top:1em;text-align:center;">
-      <img style="width:90%;" src="imgs/teufelsberg2018.jpg" alt="Peter Burgisser, Felipe Cucker, Josue Tonelli-Cueto and Alperen Ergur at Teufelsberg"/>
-      <p style="margin:0;text-align:center;font-size:0.5em;"></p>
-      <p style="margin:0;text-align:center;padding-top:0.7em;">Teufelsberg, June 2018</p>
-      <p style="text-align:justify;font-size:small;">Together with (left to right) Peter Bürgisser, Felipe Cucker and Alpeen A. Ergür at Teufelsberg, in the outskirts of Berlin, during a hiking trip.</p>
+      <img style="width:90%;" src="imgs/SIAM2019.jpg" alt="Josue Tonelli-Cueto giving a talk at the SIAM Conference on Applied Algebraic Geometry 2019"/>
+      <p style="margin:0;text-align:center;font-size:0.5em;">(&copy;2019 Felipe Cucker)</p>
+      <p style="margin:0;text-align:center;padding-top:0em;">Bern, July 2019</p>
+      <p style="text-align:justify;font-size:small;">Giving the talk <em>Farewell to Weyl: Condition-based analysis with a Banach norm in numerical algebraic geometry</em> at Minisymposium <em>Numerical methods for structured polynomial system solving</em> of the SIAM Conference on Applied Algebraic Geometry 2019.</p>
     </div>
 
    <div class="col-md-4" style="padding-top:1em;text-align:center;">
-     <img style="width:90%;" src="imgs/bmsstudconf2018_1.jpg" alt="6th BMS Student Conference organizers Héctor Andrade Loarca, Yuya Tokuta, Josué Tonelli-Cueto, Brent Moran and Qiao Luo"/>
-     <p style="margin:0;text-align:center;font-size:0.5em;">(&copy;2018 András Tobiás)</p>
-     <p style="margin:0;text-align:center;padding-top:0em;">Berlin, February 2018</p>
-     <p style="text-align:justify;font-size:small;">At the <em>Wine and Cheese</em> of the 6th BMS Student Conference with my fellow organizers and once BMS Student Representatives (left to right) Héctor Andrade Loarca, Yuya Tokuta, I, Brent Moran and Qiao Luo.</p>
+     <img style="width:90%;" src="imgs/MEGA2019.jpg" alt="Josué Tonelli-Cueto in front of his poster at the MEGA 2019"/>
+     <p style="margin:0;text-align:center;font-size:0.5em;">(&copy;2019 Cordian Riener)</p>
+     <p style="margin:0;text-align:center;padding-top:0em;">Madrid, June 2019</p>
+     <p style="text-align:justify;font-size:small;">In front of my poster <em>Computing the Homology Groups of Closed Semialgebraics Sets in Weak Exponential Time</em> at MEGA2019, where it was given one of the three Special Awards to Young Researchers presenting their Posters.</p>
    </div>
 
    <div class="col-md-4" style="padding-top:1em;text-align:center;">
-     <img style="width:90%;" src="imgs/bmsstudconf2018_2.jpg" alt="Josué Tonelli-Cueto at the 6th BMS Student Conference's Wine and Cheese reading the description of the Idiazabal cheese in Basque"/>
-     <p style="margin:0;text-align:center;font-size:0.5em;">(&copy;2018 András Tobiás)</p>
-     <p style="margin:0;text-align:center;padding-top:0em;">Berlin, February 2018</p>
-     <p style="text-align:justify;font-size:small;">At the <em>Wine and Cheese</em> of the 6th BMS Student Conference reading the description of the <a href="https://en.wikipedia.org/wiki/Idiazabal_cheese"><em>Idiazabal</em> cheese</a> in Basque. The text I read was compiled from the <a href="https://www.idiazabalgazta.eus/queso-idiazabal/deskribapena">official page of the <em>Idiazabal</em> cheese</a>. </p>
+     <img style="width:90%;" src="imgs/BYMAT2.jpg" alt="Josué Tonelli-Cueto giving a talk at the 2nd BYMAt Conference"/>
+     <p style="margin:0;text-align:center;font-size:0.5em;">(&copy;2019 Adrián Hinojosa Calleja)</p>
+     <p style="margin:0;text-align:center;padding-top:0em;">Madrid, May 2019</p>
+     <p style="text-align:justify;font-size:small;">Giving the talk <em>Hom many zeros does a random fewnomial system have?</em> at the 2nd BYMAT Conference.</p>
    </div>
 
  </div>
  <p id="botonfotos" style="text-align:center;"><button class="btn-primary" style="width:40%;font-size:1.5em;" onclick="show(1901)">Show more pictures</button></p>
  <div id="extrapictures" class="row" style="display:none;align-items: center;">
+
+   <div class="col-md-4" style="padding-top:1em;text-align:center;">
+     <img style="width:90%;" src="imgs/whatisvoting.jpg" alt="Josue Tonelli-Cueto giving a talk at the WhatIsSeminar"/>
+     <p style="margin:0;text-align:center;font-size:0.5em;">(&copy;2018 &ldquo;What is...?&rdquo; Seminar)</p>
+     <p style="margin:0;text-align:center;padding-top:0em;">Berlin,  December 2018</p>
+     <p style="text-align:justify;font-size:small;">Giving the talk <em>What is the best voting system?</em> at the &ldquo;What is...?&rdquo; Seminar.</p>
+   </div>
+
+   <div class="col-md-4" style="padding-top:1em;text-align:center;">
+     <img style="width:90%;" src="imgs/NationalPrize112018.jpg" alt="Josue Tonelli-Cueto receiving the Spanish National Prize End of Studies"/>
+     <p style="margin:0;text-align:center;font-size:0.5em;">(&copy;2018 Gobierno de España)</p>
+     <p style="margin:0;text-align:center;padding-top:0em;">Madrid, November 2018</p>
+     <p style="text-align:justify;font-size:small;">Receiving one of the first prizes in the Spanish National End of Studies Awards from the Spanish Minister of Science, Innovation and Universities Pedro Duque.</p>
+   </div>
+
+   <div class="col-md-4" style="padding-top:1em;text-align:center;">
+     <img style="width:90%;" src="imgs/BMSCertificate2018.jpg" alt="Josue Tonelli-Cueto and his parent Maria Jesus and Massimiliano "/>
+     <p style="margin:0;text-align:center;font-size:0.5em;">(&copy;2018 Kay Hermschelmann & BMS)</p>
+     <p style="margin:0;text-align:center;padding-top:0em;">Berlin, July 2018</p>
+     <p style="text-align:justify;font-size:small;">Together with my parents, Massimiliano Tonelli (left) and María Jesús Cueto Puente (right), after the BMS Certificate Ceremony where they gave me a certificate for the completion of the BMS Phase I (i.e. the courses of the PhD studies).</p>
+   </div>
+
+   <div class="col-md-4" style="padding-top:1em;text-align:center;">
+     <img style="width:90%;" src="imgs/teufelsberg2018.jpg" alt="Peter Burgisser, Felipe Cucker, Josue Tonelli-Cueto and Alperen Ergur at Teufelsberg"/>
+     <p style="margin:0;text-align:center;font-size:0.5em;">(&copy;2018 Evgenia Lagoda)</p>
+     <p style="margin:0;text-align:center;padding-top:0em;">Teufelsberg, June 2018</p>
+     <p style="text-align:justify;font-size:small;">Together with (left to right) Peter Bürgisser, Felipe Cucker and Alpeen A. Ergür at Teufelsberg, in the outskirts of Berlin, during a hiking trip.</p>
+   </div>
+
+  <div class="col-md-4" style="padding-top:1em;text-align:center;">
+    <img style="width:90%;" src="imgs/bmsstudconf2018_1.jpg" alt="6th BMS Student Conference organizers Héctor Andrade Loarca, Yuya Tokuta, Josué Tonelli-Cueto, Brent Moran and Qiao Luo"/>
+    <p style="margin:0;text-align:center;font-size:0.5em;">(&copy;2018 András Tobiás)</p>
+    <p style="margin:0;text-align:center;padding-top:0em;">Berlin, February 2018</p>
+    <p style="text-align:justify;font-size:small;">At the <em>Wine and Cheese</em> of the 6th BMS Student Conference with my fellow organizers and once BMS Student Representatives (left to right) Héctor Andrade Loarca, Yuya Tokuta, I, Brent Moran and Qiao Luo.</p>
+  </div>
+
+  <div class="col-md-4" style="padding-top:1em;text-align:center;">
+    <img style="width:90%;" src="imgs/bmsstudconf2018_2.jpg" alt="Josué Tonelli-Cueto at the 6th BMS Student Conference's Wine and Cheese reading the description of the Idiazabal cheese in Basque"/>
+    <p style="margin:0;text-align:center;font-size:0.5em;">(&copy;2018 András Tobiás)</p>
+    <p style="margin:0;text-align:center;padding-top:0em;">Berlin, February 2018</p>
+    <p style="text-align:justify;font-size:small;">At the <em>Wine and Cheese</em> of the 6th BMS Student Conference reading the description of the <a href="https://en.wikipedia.org/wiki/Idiazabal_cheese"><em>Idiazabal</em> cheese</a> in Basque. The text I read was compiled from the <a href="https://www.idiazabalgazta.eus/queso-idiazabal/deskribapena">official page of the <em>Idiazabal</em> cheese</a>. </p>
+  </div>
 
    <div class="col-md-4" style="padding-top:1em;text-align:center;">
      <img style="width:90%;" src="imgs/LeventJosue102017.jpg" alt="Levent Dogan and Josue Tonelli-Cueto"/>
@@ -314,12 +356,13 @@
 
    <div class="col-md-4" style="padding-top:1em;text-align:center;">
      <img style="width:90%;" src="pikasle/fotogrupo2014.JPG" alt="Team of PIkasle"/>
-     <p style="margin:0;text-align:center;padding-top:0.7em;">Bilbao, June 2014</p>
+     <p style="margin:0;text-align:center;font-size:0.5em;">(&copy;2014 PIkasle)</p>
+     <p style="margin:0;text-align:center;padding-top:0em;">Bilbao, June 2014</p>
      <p style="text-align:justify;font-size:small;">Together with the team of $\pi$kasle: (top left to right) Ricardo Grande, Aitziber Ibañez, Jon Asier Bárcena, Marta Macho, Imanol Pérez, (bottom left to right) Víctor Manero, Irene Llana, Antonio Gallastegui, Julio García, Manuel Santos and me.</p>
    </div>
 
    <div class="col-md-4" style="padding-top:1em;text-align:center;">
-     <img style="width:90%;" src="imgs/Debate1.jpg" alt="Part of the debating team of the University of the Basque Cpuntry"/>
+     <img style="width:90%;" src="imgs/Debate1.jpg" alt="Part of the debating team of the University of the Basque Country"/>
      <p style="margin:0;text-align:center;font-size:0.5em;">(&copy;2012 María Jesús Cueto Puente)</p>
      <p style="margin:0;text-align:center;padding-top:0em;">Bilbao, November 2012</p>
      <p style="text-align:justify;font-size:small;">Together with some of the partners of the debating club of the University of the Basque Country, (left to right) Santi González, Ion Baratas, Leire Caballero and me; and my grandmother María Jesús Puente de la Peña (second from the right).</p>
@@ -327,7 +370,8 @@
 
    <div class="col-md-4" style="padding-top:1em;text-align:center;">
      <img style="width:90%;" src="imgs/Moore122011.JPG" alt="Group of people that attened the Graph Theory Seminar using the Moore method"/>
-     <p style="margin:0;text-align:center;padding-top:0.7em;">Leioa, December 2011</p>
+     <p style="margin:0;text-align:center;font-size:0.5em;">(&copy;2011 PIkasle)</p>
+     <p style="margin:0;text-align:center;padding-top:0em;">Leioa, December 2011</p>
      <p style="text-align:justify;font-size:small;">With the group of people that attended the Graph Theory Seminar using Moore method: (from left to right) me, Iván Sánchez, Aitziber Ibañez, Ixiar Leunda, Luis Martínez and Ricardo Grande.</p>
    </div>
 
@@ -340,7 +384,8 @@
 
    <div class="col-md-4" style="padding-top:1em;text-align:center;">
      <img style="width:80%;" src="imgs/PortraitMarch2010.JPG" alt="Josue Tonelli-Cueto at 2010 with paint on his face"/>
-     <p style="margin:0;text-align:center;padding-top:0.7em;">Bilbao, March 2010</p>
+     <p style="margin:0;text-align:center;font-size:0.5em;">(&copy;2010 Iasafro Maesman)</p>
+     <p style="margin:0;text-align:center;padding-top:0em;">Bilbao, March 2010</p>
      <p style="text-align:justify;font-size:small;">After painting some painting and my face.</p>
    </div>
 
