--- a/cv_es.html
+++ b/cv_es.html
@@ -417,8 +417,14 @@
       </div></div>
 
       <br/><div class="row"><div class="col-md-12">
-      <h3>Preprints <a class="btn btn-arxiv" href="arXiv.html" Labor="button"><i class="ai ai-arxiv-square"></i> arXiv preprints' list</a></h3>
+      <h3>Preprints <a class="btn btn-arxiv" href="arXiv.html" Labor="button"><i class="ai ai-arxiv-square"></i> Lista de preprints de arXiv</a></h3>
       </div></div>
+
+      <br/><div class="cv">
+      <div class="year"><h4>2020</h4></div><div class="paper"><h4>&emsp;On the Complexity of the Plantinga-Vegter Algorithm<a class="btn btn-arxiv" href="https://arxiv.org/abs/2004.06879" role="button">arXiv:2004.06879</a></h4></div>
+       <div class="pretalktitle"></div><div class="collaborator">(Together with <a href="https://www6.cityu.edu.hk/ma/people/profile/cuckerf.htm">Felipe Cucker</a> and <a href="http://alpergur.xyz/">Alperen A. Erg&uuml;r</a>)</div>
+       <div class="pretalktitle"></div><div class="collaborator">Este es una versión para revista de <em>Plantinga-Vegter algorithm takes average polynomial time</em>.</div>
+      </div>
 
       <br/><div class="cv">
       <div class="year"><h4>2019</h4></div><div class="paper"><h4>&emsp;Computing the Homology of Semialgebraic Sets. II: General Formulas<a class="btn btn-arxiv" href="https://arxiv.org/abs/1903.10710" Labor="button">arXiv:1903.10710</a></h4></div>
