--- a/doctoralthesis.html
+++ b/doctoralthesis.html
@@ -245,37 +245,37 @@
     <div class="col-md-4" style="padding-top:1em;text-align:center;">
       <img style="width:90%;" src="imgs/Doc05.JPG" alt="Josue Tonelli-Cueto with his parents and friends from Bilbao."/>
       <p style="margin:0;text-align:center;font-size:0.5em;">(&copy;2019 Evgenia Lagoda)</p>
-      <p style="text-align:justify;font-size:small;">With my parents and a pair of friends from Bilbao. From left to right, me, Massimiliano Tonelli, Aritzeder Aranguren Cebas, María Jesús Cueto Puente, and Iratxe Niño Adan.</p>
+      <p style="text-align:justify;font-size:small;">With my parents and a pair of friends from Bilbao. From left to right, me, Massimiliano, Aritzeder, María Jesús, and Iratxe.</p>
     </div>
 
     <div class="col-md-4" style="padding-top:1em;text-align:center;">
       <img style="width:90%;" src="imgs/Doc06.JPG" alt="Josue Tonelli-Cueto with some of his friends from Berlin after his doctoral defence."/>
       <p style="margin:0;text-align:center;font-size:0.5em;">(&copy;2019 Evgenia Lagoda)</p>
-      <p style="text-align:justify;font-size:small;">With some friends from Berlin. From left to right, Robert Schwieger, Shane Carlson, Rinat Khanbekov, Eddie Seabrook, me, Justine Mullon, and Milica Valent.</p>
+      <p style="text-align:justify;font-size:small;">With some friends from Berlin. From left to right, Robert, Shane, Rinat, Eddie, me, Justine, and Milica.</p>
     </div>
 
     <div class="col-md-4" style="padding-top:1em;text-align:center;">
       <img style="width:90%;" src="imgs/Doc04.JPG" alt="Josue Tonelli-Cueto with his doctoral committee after his doctoral defence."/>
       <p style="margin:0;text-align:center;font-size:0.5em;">(&copy;2019 Evgenia Lagoda)</p>
-      <p style="text-align:justify;font-size:small;">With my doctoral supervisors and the external evaluator of my doctoral committee. From left to right, Felipe Cucker, Peter B&uuml;rgisser, me, and Pierre Lairez.</p>
+      <p style="text-align:justify;font-size:small;">With my doctoral supervisors and the external evaluator of my doctoral committee. From left to right, Felipe, Peter, me, and Pierre.</p>
     </div>
 
     <div class="col-md-4" style="padding-top:1em;text-align:center;">
       <img style="width:90%;" src="imgs/Doc08.JPG" alt="Josue Tonelli-Cueto with some Spanish friends from Berlin after his doctoral defence."/>
       <p style="margin:0;text-align:center;font-size:0.5em;">(&copy;2019 Evgenia Lagoda)</p>
-      <p style="text-align:justify;font-size:small;">With some Spanish friends from Berlin. From left to right, Concha Álvarez, me, Zara (Juan Antonio Zaratiegui), and Pedro Ángel Castillejo.</p>
+      <p style="text-align:justify;font-size:small;">With some Spanish friends from Berlin. From left to right, Concha, me, Zara, and Pedro Ángel.</p>
     </div>
 
     <div class="col-md-4" style="padding-top:1em;text-align:center;">
       <img style="width:90%;" src="imgs/Doc07.JPG" alt="Josue Tonelli-Cueto with Justine Mullon after his doctoral defence."/>
       <p style="margin:0;text-align:center;font-size:0.5em;">(&copy;2019 Evgenia Lagoda)</p>
-      <p style="text-align:justify;font-size:small;">With my friend Justine Mullon.</p>
+      <p style="text-align:justify;font-size:small;">With my friend Justine.</p>
     </div>
 
     <div class="col-md-4" style="padding-top:1em;text-align:center;">
       <img style="width:90%;" src="imgs/Doc09.JPG" alt="Josue Tonelli-Cueto with some friend from Berlin after his doctoral defence."/>
       <p style="margin:0;text-align:center;font-size:0.5em;">(&copy;2019 Evgenia Lagoda)</p>
-      <p style="text-align:justify;font-size:small;">With some friends of Berlin. From left to right, Qianheng Chen, Qiao Luo, me, and Héctor Andrade Loarca.</p>
+      <p style="text-align:justify;font-size:small;">With some friends of Berlin. From left to right, Qianheng, Qiao, me, and Héctor.</p>
     </div>
 
     <div class="col-md-4" style="padding-top:1em;text-align:center;">
@@ -287,13 +287,13 @@
     <div class="col-md-4" style="padding-top:1em;text-align:center;">
       <img style="width:90%;" src="imgs/Doc11.JPG" alt="Josue Tonelli-Cueto with Matias Bender after his doctoral defence."/>
       <p style="margin:0;text-align:center;font-size:0.5em;">(&copy;2019 Evgenia Lagoda)</p>
-      <p style="text-align:justify;font-size:small;">With my friend and colleague Matías Bender.</p>
+      <p style="text-align:justify;font-size:small;">With my friend and colleague Matías.</p>
     </div>
 
     <div class="col-md-4" style="padding-top:1em;text-align:center;">
       <img style="width:90%;" src="imgs/Doc12.JPG" alt="Celebratory dinner of the doctoral defence of Josue Tonelli-Cueto."/>
       <p style="margin:0;text-align:center;font-size:0.5em;">(&copy;2019 Evgenia Lagoda)</p>
-      <p style="text-align:justify;font-size:small;">Celebrating the successful defence. From left to right, Aritzeder Aranguren Cebas, María Jesús Cueto Puente, Claudia Cucker Martorell, Pierre Lairez, me, Peter B&uuml;rgisser, Felipe Cucker, Iratxe Niño Adan, and Massimiliano Tonelli.</p>
+      <p style="text-align:justify;font-size:small;">Celebrating the successful defence. From left to right, Aritzeder, María Jesús, Claudia, Pierre, me, Peter, Felipe, Iratxe, and Massimiliano.</p>
     </div>
 
   </div>
